creusot/tests/should_fail/prusti/calls/send_back.stderr
error[creusot]: expected `'curr` to outlive `'x`
                required by home signature of function
 --> send_back.rs:6:5
  |
6 |     move_state2(at_expiry::<'x>(t))
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

